--- a/Index_style.css
+++ b/Index_style.css
@@ -1251,6 +1251,10 @@
 
     @media (max-width: 520px) { 
 
+        * {
+            
+        }
+
 
         header {
 
@@ -1363,7 +1367,9 @@
 
 
         .first-article p, .second-article p {
+    
             width: 100%;
+            height: auto;
             bottom: 0;
             left: 0;
             font-size: 1em;
@@ -1379,7 +1385,7 @@
             height: 40%;
         }
 
-        .first-article .quadrado-imagem:before , .second-article .quadrado-imagem:before {
+        .first-article .quadrado-imagem:before, .second-article .quadrado-imagem:before {
 
             display: none;
         } 
