--- a/Index_style.css
+++ b/Index_style.css
@@ -460,10 +460,9 @@
         
         width: 30em;
         height: 30em;
+        padding: 5em;
         border: 1px gray solid;
         display: flex;
-        justify-content: center;
-        align-content: center;
         position: absolute;
         bottom: 0;
         left: 0em;
@@ -481,7 +480,7 @@
         background-color: white;
         position: absolute;
         top: -1em;
-        right: 3em;
+        right: 8%;
 
   
         
@@ -494,7 +493,7 @@
         height: 400px;
         background-color: white;
         position: absolute;
-        bottom: 3em;
+        bottom: 8%;
         left: -1em;
   
     }
@@ -502,7 +501,8 @@
     
      .first-article img {
         
-        width: 60%;
+        width: 100%;
+        height: 100%;
         z-index: 1;
     }
     
@@ -677,10 +677,9 @@
         
         width: 30em;
         height: 30em;
+        padding: 5em;
         border: 1px gray solid;
         display: flex;
-        justify-content: center;
-        align-content: center;
         position: absolute;
         bottom: 0;
         right: 0;
@@ -698,7 +697,7 @@
         background-color: white;
         position: absolute;
         top: -1em;
-        right: 3em;
+        right: 8%;
 
         
        
@@ -712,7 +711,7 @@
         height: 400px;
         background-color: white;
         position: absolute;
-        bottom: 3em;
+        bottom: 8%;
         left: -1em;
 
     }
@@ -720,7 +719,8 @@
     
      .second-article img {
         
-        width: 60%; 
+        width: 100%;
+        height: 100%;
         z-index: 1;
     }
 
@@ -1072,14 +1072,6 @@
 
         
 
-        .first-article .button, .second-article .button {
-
-            font-size: 6em;
-            margin-bottom: 0;
-            bottom: 0;
-   
-         }
-
         .first-article p, .second-article p {
             bottom: 0;
             font-size: 1.4em;
@@ -1089,17 +1081,29 @@
 
             width: 20em;
             height: 20em;
+            padding: 3em;
         }
 
         .first-article .quadrado-imagem:before , .second-article .quadrado-imagem:before {
 
-            display: none;
+            content: "";
+            width: 16em;
+            height: 22em;
+            background-color:white;
+            bottom: -1em;
+            left:2em;
+           
         } 
 
         .first-article .quadrado-imagem:after , .second-article .quadrado-imagem:after {
 
-            display: none;
-        } 
+            content: "";
+            width: 22em;
+            height: 16em;
+            background-color: white;
+            top: 2em;
+            left:-1em;
+        }
 
         .first-article h4, .second-article h4 {
 
@@ -1249,7 +1253,7 @@
 
 
 
-    @media (max-width: 520px) { 
+    @media (max-width: 590px) { 
 
         * {
             
@@ -1388,12 +1392,20 @@
 
         .first-article .quadrado-imagem:before, .second-article .quadrado-imagem:before {
 
-            display: none;
+            background-color: white;
+            left: 10%;
+            bottom: -2px;
+            width: 80%;
+            height: 110%;
         } 
 
         .first-article .quadrado-imagem:after , .second-article .quadrado-imagem:after {
 
-            display: none;
+            background-color: white;
+            left: -2px;
+            top: 10%;
+            width: 110%;
+            height: 80%;
         } 
 
 
