--- a/Index_style.css
+++ b/Index_style.css
@@ -1131,7 +1131,7 @@
         footer p{
 
             width: 100%;
-            font-size: 2em;
+            font-size: 1.4em;
 
         }
 
@@ -1142,7 +1142,7 @@
 
         footer img {
         
-            width: 40em;
+            width: 30em;
             align-self: center;
         
         }
@@ -1155,7 +1155,7 @@
         .fab{
         
             
-            font-size: 4em;
+            font-size: 3em;
          
         }
 
@@ -1235,9 +1235,6 @@
             text-shadow: -2px -2px 0 #ffffff, 2px -2px 0 #ffffff, -2px 2px 0 #ffffff, 2px 2px 0 #ffffff;
         }
 
-        footer {
-            display: none;
-        }
 
 
         .first-article p,  .second-article p {
@@ -1246,10 +1243,25 @@
             font-size: 1.2em;
         }
 
-    
-        
-    }
+        footer p {
 
+            font-size: 1.2em;
+            
+        }
+
+        footer img {
+
+            width: 100%;
+            
+        }
+
+        .fab{
+        
+            font-size: 2em;
+         
+        }
+
+    }
 
 
 
@@ -1280,20 +1292,14 @@
             border-right: 20px solid transparent;
         }
 
-
-     
-
         .logo-header {
         
             width: 15em;
             align-self: center;
             margin: 1em 0 0 0;
-            
      
         }
 
-      
-    
         .foto-perfil {
 
             width: 8em;
@@ -1304,10 +1310,7 @@
             border: 1.5px white solid;
      
         } 
-        
-       
-
-      
+ 
         .foto-logo:before {
         
             content: "1992 - 2011 - 2020";
@@ -1375,7 +1378,7 @@
             width: 100%;
             height: auto;
 
-           top: 13em;
+            top: 13em;
             left: 0;
             font-size: 1.2em;
         }
