--- a/Index_style.css
+++ b/Index_style.css
@@ -1419,6 +1419,23 @@
             bottom: -1.5em;
         }
 
+        footer:before {
+        
+            content: '';
+            width: 5em;
+            height: 5em;
+            background-color: transparent;
+            position: absolute;
+            top:0;
+            right:0;
+            
+            width: 0;
+            height: 0;
+            border-top: 20px solid white;
+            border-left: 20px solid transparent;
+        }
+        
+
       
 
     }
