--- a/Ux_style.css
+++ b/Ux_style.css
@@ -38,8 +38,9 @@
             
             .primeirodesenho{
                 
-                width: 70%;
+                width: 75%;
                 display: flex;
+             
                
             } 
             
@@ -51,7 +52,7 @@
             .logodesc {
 
                 margin: 0 0 0 7em;
-                width: 40%;
+                width: 35%;
                 position: relative;
             }
             
@@ -68,7 +69,7 @@
             
             .logodesc img {
                 
-                width: 60%;
+                width: 50%;
             }
             
             .logodesc p {
@@ -147,7 +148,7 @@
             
             .abordagem .logo {
                 
-                width: 8%;
+                width: 7%;
             }
             
             .abordagem .abordagemimg {
@@ -161,11 +162,7 @@
                 width: 60%;
             }
             
-            .idea img { 
-                
-                width: 50%;
-            
-            }
+          
             
             .storyboard {
                 
@@ -380,11 +377,11 @@
                 
                 
                 border: 2px #E5ECF1 solid;
-                padding: 2em;
+                padding: 1em;
                 border-radius: 30px 30px 30px 0px;
                 box-shadow: 0px 10px 0px 0px rgba(229,236,241,1);
                 width: 20%;
-                margin: 3em;
+                margin: 2em;
                 position: relative;
    
             }
@@ -716,57 +713,180 @@
                 width: 80%;
             }
 
-
-
-
-
-
-
-            /* 
-
             @media only screen and (max-width: 1200px) {
+                
+                .logodesc {
+
+                    margin-left: 3em;
+                }
+
+                .logodesc img {
+
+                    width: 60%;
+
+    
+                }
+
+                .logodesc p {
+
+                    font-size: 1.5em;
+                }
 
 
-                .primeirodesenho .meninacelular {
+                ul {
+                    font-size: 1.25em;
+                }
 
-                    display: none;
-                 }
-
-                 section {
+                section {
 
                     width: 70%;
-                 }
+                }
 
+                h1{
+                
+                    margin-top: 1em;
+                  
+                }
+                
+                h2 {
+                    
+                
+                }
+                
+                h3 {
+             
+                 
+                }
+                
+                section p{
+                    
+                    
+                }
+                
                  .abordagem, .benchmark, .usuarios, .analise, .idea, .style, .usabilidade{
                 
+                    margin-top: 5em;
+               
+                }
+                
+            
+                 .abordagem p , .benchmark p, .usuarios p, .analise p, .idea p, .style p, .usabilidade p{
+
+                    width: 70%;
                    
+                }
+                
+                .abordagem .logo {
+                    
+                    width:8%;
+                }
+                
+                .abordagem .abordagemimg {
+                    
+                    width: 37%;
+                    margin: 2em;
+                }
+
+                .analise img, .idea img {
+                
+                    width: 70%;
+                }
+
+                .benchcontainer {
+
+                    width: 70%;
+                }
+
+                .benchcontainer p {
+                
+                    margin: 0;
+                    width: 100%;
+                }
+
+                .benchcontainer ul {
+
+                    font-size: 1.5em;
+                }
+                
+                .personascontainer {
+
+                    width: 70%;
+                }
+
+                .wireframe {
+
                     width: 70%;
                     margin: auto;
-                  
                 }
 
-               
-                .abordagem p, .benchmark p, .usuarios p, .analise p, .idea p, .style p {
+
+             .wireframe a {
+
+                width: 100%;
+                padding: 1em;
+                border-radius: 20px 20px 20px 0px;
+                margin: 1em;
+             }
+
+             .prototipo .cefr{
                 
-                    text-align: left;
-                    font-size: 1.25em;
-                    width: 100%;
-                  
-                }
+                width:  70%;       
+               
+           }
 
+             .protrow8 {
+
+               width: 70%;
+               
+           }
+
+           .style .moodboard {
+               width: 70%;
+           }
+ 
+            .style .cores {
+                
+            width: 70%;
+            
+        }
+        
+        
+        
+            .style .desenhos {
+        
+            width: 70%;
+        }
+
+        .imgunder {
+
+            width: 90%;
+            transform: translate();
+        }
+        
+        
+
+           .style .logobrand {
+
+            width: 70%;
+        }
+
+           .style .mockup {
+
+            width: 70%;
+
+    
+        }
+
+        .style .personagens {
+            
+            width: 90%;
+        }
 
 
             }
 
-*/
-
-
-
-
-
-
         
-            @media only screen and (max-width: 800px) {
+            @media only screen and (max-width: 600px) {
 
                 body {
 
