--- a/Ux_style.css
+++ b/Ux_style.css
@@ -124,8 +124,8 @@
             
              .abordagem, .benchmark, .usuarios, .analise, .idea, .style, .usabilidade{
                 
-                bordr: 1px red solid;
-                margin-top: 10em;
+                border: 1px red solid;
+                margin-top: 0em;
                 text-align: center;
                 overflow: hidden;
            
@@ -147,14 +147,14 @@
             }
             
             .abordagem .logo {
-                
+                margin-top: 5em;
                 width: 7%;
             }
             
             .abordagem .abordagemimg {
                 
-                width: 29%;
-                margin: 3em;
+                width: 30%;
+                margin: 2em;
             }
             
             .analise img, .idea img {
@@ -362,15 +362,13 @@
                 align-self: center;
                 
             }
-            
+
             
             .wireframe {
                 
                 display: flex;
                 justify-content: center;
-               
-                
-               
+  
             }
             
             .wireframe a {
@@ -428,8 +426,7 @@
                 background-color: #E5ECF1;
                 height: auto;
                 padding: 3em 0em;
-                text-align: center;
-                
+                text-align: center;  
                 
             }
 
@@ -713,7 +710,7 @@
                 width: 80%;
             }
 
-            @media only screen and (max-width: 1200px) {
+            @media only screen and (max-width: 1250px) {
                 
                 .logodesc {
 
