--- a/branding_style.css
+++ b/branding_style.css
@@ -17,18 +17,55 @@ header {
     
     width: 100%;
     background-color: black;
-    display: flex;
-    height: 6em;
-    justify-content:center;
-    align-content: center;
+    padding:0;
+    height: auto;
 
 }
 
-header a {
-        
-    width: 3.2em;
-    margin: 1em 0em 2em 0em;
+header ul li a {
+
+    text-decoration: none;
+    color: white;
+    width: 100%;
+    position: relative;
+ 
+}
+
+header ul li a:hover:before{
+
+    content: "";
+    width: 100%;
+    height: 3px;
+    background-color: white;
+    position: absolute;
+    bottom: 0px;
     
+}
+
+
+header ul li a img {
+    margin: .6em 0 .3em 0;  
+    width: 1.5em;
+  
+ 
+}
+
+header ul {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    list-style: none;
+    color: white;
+    padding: 0;
+    margin: 0;
+
+}
+
+header ul li {
+
+    font-size: 2em;
+    font-family: BebasKai;
 }
 
 
@@ -44,8 +81,6 @@ main {
      height: 100%;
      display: flex;
      flex-direction: column;
-     
-    
 
 }
 
