--- a/Ux_style.css
+++ b/Ux_style.css
@@ -1,5 +1,9 @@
 
-            
+        @font-face {
+                font-family: BebasKai;
+                src: url(Fonts/BebasKai.ttf);
+              }
+
             body {
             width: 100%;
             margin: 0;
@@ -10,22 +14,67 @@
             }
             
             header {
-        
-            width: 100%;
-            background-color: black;
-            height: 6em;
-            display: flex;
-            justify-content:center;
-            align-content: center;
-    }
     
-
-            header a {
-        
-            width: 3.2em;
-            margin: 1em 0em 2em 0em;
+                width: 100%;
+                background-color: black;
+                padding:0;
+                height: auto;
+               
             
-    }
+            }
+            
+            header ul {
+                display: flex;
+                flex-direction: row;
+                justify-content: space-around;
+                align-items: center;
+                list-style: none;
+                color: white;
+                padding: 0;
+                margin: 0;
+    
+            
+            }
+            
+            header ul li a {
+            
+                text-decoration: none;
+                color: white;
+                width: 100%;
+                position: relative;
+             
+            }
+            
+            header ul li a:hover:before{
+            
+                content: "";
+                width: 100%;
+                height: 2px;
+                background-color: tomato;
+                position: absolute;
+                bottom: 0px;
+                
+            }
+            
+            .logocima:hover:before {
+            
+               display: none;
+            
+            }
+            
+            
+            
+            header ul li {
+            
+                font-size: 2em;
+                font-family: BebasKai;
+            }
+            
+            header ul li a img {
+                margin: .6em 0 .3em 0;  
+                width: 1.5em;
+             
+            }
     
     
             article {
@@ -283,16 +332,24 @@
             
             
        
-            ul {
+            .benchcontainer ul {
                 font-size: 1.5em;
                 color: #727D83;
                
                 
             }
         
-            li {
+            
+
+            .usuarios section ul {
+                font-size: 1.5em;
+                color: #727D83;
+            }
+
+            .benchcontainer ul li,.usuarios section ul li {
                 
                 margin-bottom: .5em;
+              
             }
             
                 
@@ -730,7 +787,7 @@
 
 
                 ul {
-                    font-size: 1.25em;
+                    font-size: 1.5em;
                 }
 
                 section {
