--- a/branding_style.css
+++ b/branding_style.css
@@ -48,7 +48,7 @@ header ul li a:hover:before{
     content: "";
     width: 100%;
     height: 2px;
-    background-color: white;
+    background-color: tomato;
     position: absolute;
     bottom: 0px;
     
@@ -56,7 +56,7 @@ header ul li a:hover:before{
 
 .logocima:hover:before {
 
-display: none;
+   display: none;
 
 }
 
