--- a/Ux_style.css
+++ b/Ux_style.css
@@ -19,23 +19,39 @@
                 background-color: black;
                 padding:0;
                 height: auto;
+                position: relative;
                
             
             }
+
+            header:before{
+                content: '';
+                width: 5em;
+                height: 5em;
+                background-color: transparent;
+                position: absolute;
+                bottom:0;
+                left:0;
+                
+                width: 0;
+                height: 0;
+                border-bottom: 20px solid white;
+                border-right: 20px solid transparent;
+            }
             
             header ul {
+                width: 70%;
+                margin: auto;
                 display: flex;
                 flex-direction: row;
                 justify-content: space-around;
                 align-items: center;
                 list-style: none;
-                color: white;
                 padding: 0;
-                margin: 0;
-    
-            
+
             }
             
+
             header ul li a {
             
                 text-decoration: none;
@@ -72,7 +88,7 @@
             
             header ul li a img {
                 margin: .6em 0 .3em 0;  
-                width: 1.5em;
+                width: 1.3em;
              
             }
     
