--- a/Ux_style.css
+++ b/Ux_style.css
@@ -58,6 +58,7 @@
                 color: white;
                 width: 100%;
                 position: relative;
+                transition: 1s;
              
             }
             
