--- a/branding_style.css
+++ b/branding_style.css
@@ -182,6 +182,15 @@ h3{
  @media (max-width: 1300px) {
 
     
+    main {
+
+        width: 80%;
+    }
+
+    .container {
+        width: 80%;
+    }
+
     p {
         font-size: 1.5em;
       
@@ -191,6 +200,25 @@ h3{
 
 
 @media (max-width: 800px) {
+
+
+    header {
+
+        width: 100%;
+       background-color: black;
+       padding:0;
+       height: 5em;
+       position: relative;
+    }
+    
+    header ul {
+
+        border: 1px red solid;
+        display: none;
+
+    }
+
+   
 
     h2 {
  
