--- a/branding_style.css
+++ b/branding_style.css
@@ -76,8 +76,6 @@ header ul li a:hover:before{
 }
 
 
-
-
 .logocima:hover:before {
 
    display: none;
@@ -96,6 +94,25 @@ header ul li a img {
     margin: .6em 0 .3em 0;  
     width: 1.3em;
  
+}
+
+
+
+.hamburger {
+
+    width: 3em;
+    height:3em;
+    float: right;
+    display: none;
+
+}
+
+.hamburger .ham{
+
+    width: 100%;
+    height: 4px;
+    margin-bottom: 10px;
+    background-color: white;
 }
 
 
@@ -202,9 +219,19 @@ h3{
 @media (max-width: 800px) {
 
 
+    .hamburger {
+
+        margin: 25px 25px 0 0 ;
+        display: block;
+
+    }
+
+  
+
+
     header {
 
-        width: 100%;
+       width: 100%;
        background-color: black;
        padding:0;
        height: 5em;
@@ -213,9 +240,7 @@ h3{
     
     header ul {
 
-        border: 1px red solid;
         display: none;
-
     }
 
    
