--- a/branding_style.css
+++ b/branding_style.css
@@ -100,8 +100,8 @@ header ul li a img {
 
 .hamburger {
 
-    width: 3em;
-    height:3em;
+    width: 2.5em;
+    height:2em;
     float: right;
     display: none;
 
@@ -110,7 +110,7 @@ header ul li a img {
 .hamburger .ham{
 
     width: 100%;
-    height: 4px;
+    height: 3px;
     margin-bottom: 10px;
     background-color: white;
 }
@@ -222,11 +222,8 @@ h3{
     .hamburger {
 
         margin: 25px 25px 0 0 ;
-        display: block;
-
+        display: block
     }
-
-  
 
 
     header {
