--- a/branding_style.css
+++ b/branding_style.css
@@ -100,20 +100,68 @@ header ul li a img {
 
 .hamburger {
 
-    width: 2.5em;
-    height:2em;
+    width: 2.2em;
+    height:1.4em;
     float: right;
     display: none;
+    position: relative;
+    transition: .3s ease-in-out;
+    cursor: pointer;
+
 
 }
 
 .hamburger .ham{
 
     width: 100%;
-    height: 3px;
-    margin-bottom: 10px;
+    height: 2px;
+    margin-bottom: 8px;
+    background-color: white;
+    transition: .3s ease-in-out;
+}
+
+input {
+    display: none;
+    
+}
+
+input:checked ~ label .hamburger {
+
+    box-shadow:  0 0 0 100vw black, 0 0 0 130vh black ;
+    border-radius: 100%;
+    z-index: 100;
+}
+
+input:checked ~ label .hamburger{
+
+    transform: rotate(45deg);
+    
+}
+
+input:checked ~ label .hamburger .ham1 {
+
+    transform: rotate(90deg);
+    position: absolute;
+    bottom: 0;
     background-color: white;
 }
+
+input:checked ~ label .hamburger .ham2 {
+
+    position: absolute;
+    bottom: 0;
+    background-color: white;
+
+}
+
+input:checked ~ label .hamburger .ham3 {
+
+    position: absolute;
+    bottom: 0;
+    background-color: white;
+
+}
+
 
 
 main {
@@ -221,7 +269,7 @@ h3{
 
     .hamburger {
 
-        margin: 25px 25px 0 0 ;
+        margin: 30px 30px 0 0 ;
         display: block
     }
 
@@ -240,7 +288,6 @@ h3{
         display: none;
     }
 
-   
 
     h2 {
  
