--- a/branding_style.css
+++ b/branding_style.css
@@ -291,12 +291,19 @@ h3{
        position: fixed;
     }
 
-
-    
-    header ul {
+    header:before {
 
         display: none;
     }
+
+ 
+    header ul {
+
+        display: none;
+        
+    }
+
+    
     
     .respmenu {
     
@@ -304,9 +311,8 @@ h3{
         flex-direction: column;
         position: absolute;
         top: 10em;
-        right: 7em;
-    
-      
+        left: 15%;
+  
     }
 
     .respmenu li {
@@ -315,22 +321,20 @@ h3{
         font-size: 4em;
         z-index: 105;
         display: none;
-       
+  
     }
 
- 
 
     input:checked ~ label ul li {
 
         font-size: 4em;
         color: white;
         z-index: 105;      
-        display: block; 
+        display: block;
+        
     }
-    
-    
- 
 
+  
     h2 {
  
         font-size: 8em;
