--- a/Ux_style.css
+++ b/Ux_style.css
@@ -4,6 +4,7 @@
                 src: url(Fonts/BebasKai.ttf);
               }
 
+
             body {
             width: 100%;
             margin: 0;
@@ -91,6 +92,81 @@
                 margin: .6em 0 .3em 0;  
                 width: 1.3em;
              
+            }
+
+            header .mobilelogo{
+                display: none;
+             
+            }
+
+            .hamburger {
+
+                width: 2.2em;
+                height:1.4em;
+                float: right;
+                display: none;
+                position: relative;
+                transition: .3s ease-in-out;
+                cursor: pointer;
+            
+            
+            }
+            
+            .hamburger .ham{
+            
+                width: 100%;
+                height: 2px;
+                margin-bottom: 8px;
+                background-color: white;
+                transition: .3s ease-in-out;
+            }
+            
+            input {
+                display: none;
+                
+            }
+            
+            input:checked ~ label .hamburger {
+            
+                box-shadow:  0 0 0 100vw black, 0 0 0 130vh black ;
+                border-radius: 100%;
+                z-index: 100;
+            }
+            
+            input:checked ~ label .hamburger{
+            
+                transform: rotate(45deg);
+                
+            }
+            
+            input:checked ~ label .hamburger .ham1 {
+            
+                transform: rotate(90deg);
+                position: absolute;
+                bottom: 0;
+                background-color: white;
+            }
+            
+            input:checked ~ label .hamburger .ham2 {
+            
+                position: absolute;
+                bottom: 0;
+                background-color: white;
+            
+            }
+            
+            input:checked ~ label .hamburger .ham3 {
+            
+                position: absolute;
+                bottom: 0;
+                background-color: white;
+            
+            }
+            
+            .respmenu {
+            
+                display:none;
+            
             }
     
     
@@ -787,6 +863,12 @@
             }
 
             @media only screen and (max-width: 1250px) {
+
+                header ul {
+
+                    width: 90%;
+                    margin: auto;
+                }
                 
                 .logodesc {
 
@@ -807,7 +889,7 @@
 
 
                 ul {
-                    font-size: 1.5em;
+                    font-size: 1em;
                 }
 
                 section {
@@ -957,6 +1039,84 @@
 
 
             }
+
+            @media only screen and (max-width: 700px) {
+
+            
+            
+            
+                header {
+            
+                   width: 100%;
+                   background-color: black;
+                   padding:0;
+                   height: 5em;
+                   position: relative;
+            
+                }
+            
+                header:before {
+            
+                    display: none;
+                }
+            
+                header ul {
+            
+                    display: none;   
+                }
+            
+                header .mobilelogo{
+                    display: block;
+                    position: absolute;
+                    top: 14px;
+                    left: 25px;
+                    width: 2.5em;
+                 
+                }
+
+                .hamburger {
+
+                    margin: 30px 25px 0 0 ;
+                    display: block
+                }
+             
+                .respmenu {
+                
+                    display: flex;
+                    flex-direction: column;
+                    position: absolute;
+                    top: 15em;
+                    left: 5%;
+              
+                }
+            
+                .respmenu li {
+            
+                    color:white;
+                    font-size: 4em;
+                    z-index: 105;
+                    display: none;
+              
+                }
+            
+            
+                input:checked ~ label ul li {
+            
+                    font-size: 4em;
+                    color: white;
+                    z-index: 105;      
+                    display: block;
+                    
+                }
+
+                .meninacelular {
+                    display: none;
+                }
+
+
+            }
+
+         
 
         
             @media only screen and (max-width: 600px) {
