--- a/Ux_style.css
+++ b/Ux_style.css
@@ -862,6 +862,17 @@
                 width: 80%;
             }
 
+            .stickhome img{
+        
+                width: 3em;
+                visibility: hidden;
+                opacity: 0;
+                position: fixed;
+                top: 0em;
+                right: 5em;
+                transition:1s;
+            }
+
             @media only screen and (max-width: 1250px) {
 
                 header ul {
