--- a/Ux_style.css
+++ b/Ux_style.css
@@ -339,7 +339,7 @@
                 
                 font-size: 4em;
                 width: 60%;
-                margin: 3em auto;
+                margin: 5em auto 3em auto;
                 text-align: left;
                 position: relative;
             }  
@@ -1087,6 +1087,7 @@
                  
                 }
 
+
                 .hamburger {
 
                     margin: 30px 25px 0 0 ;
@@ -1122,14 +1123,32 @@
                     
                 }
 
+                .analise h2:nth-child(9) {
+                
+                    font-size: 2em;
+                    width: 90%;
+                    margin: 5em auto 3em auto;
+                    text-align: left;
+                    position: relative;
+                }  
+                
+                .analise h2:nth-child(9):before{ 
+               
+                    font-size: 8em;
+                    color: #E5ECF1;
+                    position: absolute;
+                    top:-.5em;
+                    left: .6em;
+                    z-index: -100;
+             
+                }
+
                 .meninacelular {
                     display: none;
                 }
 
 
             }
-
-         
 
         
             @media only screen and (max-width: 600px) {
@@ -1319,6 +1338,7 @@
                 .analise h2:nth-child(10)::before{ 
                     
                     display: none;
+                    
              
                 }
                 
@@ -1334,7 +1354,8 @@
                 
                 .usuarios h2:nth-child(8):before, .usuarios h2:nth-child(9)::before{ 
                     
-                    display: none;
+                   
+                    font-size: 10em;
              
                 }
 
