--- a/Ux_style.css
+++ b/Ux_style.css
@@ -836,12 +836,9 @@
                 width: 60%;
                 z-index: 12;
             }
-            
-            
-            
+        
             .style .desenhos {
-                
-                
+                            
                 width: 60%;
             }
             
@@ -891,7 +888,6 @@
                 .logodesc img {
 
                     width: 60%;
-
     
                 }
 
@@ -899,9 +895,6 @@
 
                     font-size: 1.5em;
                 }
-
-
-               
 
                 section {
 
@@ -1086,9 +1079,7 @@
                     top: 14px;
                     left: 25px;
                     width: 2.5em;
-                 
                 }
-
 
                 .hamburger {
 
@@ -1150,11 +1141,7 @@
                     font-size: 3em;
                    
                 }
-                
-                
-
-            
-
+           
                 .meninacelular {
                     display: none;
                 }
@@ -1424,21 +1411,24 @@
                     width: 100%;
                 }
 
+                   .sketch {
+                       padding: 0;
+                   }
+
                     .wireframe {
-                
+                     
+                    width: 80%;    
                     display: flex;
                     justify-content: center;
                     flex-direction: column;
                     }
 
                     .wireframe a {
+
                 
-                
-                        border: 2px #E5ECF1 solid;
+                       
                         box-sizing: border-box;
                         padding: 1em;
-                        border-radius: 30px 30px 30px 0px;
-                        box-shadow: 0px 10px 0px 0px rgba(229,236,241,1);
                         width: 100%;
                         margin: 3em 0;
                         position: relative;
