--- a/Ux_style.css
+++ b/Ux_style.css
@@ -625,7 +625,10 @@
                 
                  border-radius: 20px;
                  width:  30%;
+                 padding: 1em;
+                 box-sizing: border-box;
                  box-shadow: -1px 13px 11px 2px rgba(0,0,0,0.10);
+                 background-color: white;
                 
             }
 
