--- a/Index_style.css
+++ b/Index_style.css
@@ -463,6 +463,8 @@
         padding: 5em;
         border: 1px gray solid;
         display: flex;
+        justify-content: center;
+        align-content: center;
         position: absolute;
         bottom: 0;
         left: 0em;
@@ -501,7 +503,6 @@
     
      .first-article img {
         
-        width: 100%;
         height: 100%;
         z-index: 1;
     }
@@ -680,6 +681,8 @@
         padding: 5em;
         border: 1px gray solid;
         display: flex;
+        justify-content: center;
+        align-content: center;
         position: absolute;
         bottom: 0;
         right: 0;
@@ -719,7 +722,6 @@
     
      .second-article img {
         
-        width: 100%;
         height: 100%;
         z-index: 1;
     }
