--- a/digital_style.css
+++ b/digital_style.css
@@ -256,7 +256,7 @@ main {
 
     height: 10em;
     width: 70%;
-    margin: auto;
+    margin: 0 auto 5em auto;
     display: flex;
     justify-content: center;
     align-items:flex-end;
@@ -420,7 +420,7 @@ main {
     .col1 img, .col2 img {
 
     
-        margin: 2px 0;
+        margin: 0px 0;
      
      }
     
