--- a/press_style.css
+++ b/press_style.css
@@ -258,7 +258,7 @@ main {
 
     height: 10em;
     width: 70%;
-    margin: auto;
+    margin: 0 auto 5em auto;
     display: flex;
     justify-content: center;
     align-items:flex-end;
@@ -422,7 +422,7 @@ main {
     .col1 img, .col2 img {
 
     
-        margin: 2px 0;
+        margin: 0;
      
      }
     
