--- a/Ux_style.css
+++ b/Ux_style.css
@@ -527,7 +527,14 @@
                 width: 20%;
                 margin: 2em;
                 position: relative;
+                transition: .5s;
    
+            }
+
+            .wireframe a:hover {
+
+                box-shadow: 0px 10px 0px 0px rgb(18, 131, 96);
+
             }
             
              .wireframe a:nth-child(1):before {
