--- a/Ux_style.css
+++ b/Ux_style.css
@@ -1160,6 +1160,11 @@
                     display: none;
                 }
 
+                .primeirodesenho img {
+        
+                    width: 100%;     
+                }
+
             @media only screen and (max-width: 600px) {
 
                 body {
